# amosclaude-clean

./: .dockerignore  .env  .env.codex.example  .env.example  .env.production.example  .env.workspace.example  .gitignore  AGENTS.md  AMOSCLAUD_AUTONOMOUS_INTEGRATION.md  Amosclaud.py  BILLING.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  LICENSE-COMMERCIAL.txt  Makefile  PACKAGE_MANIFEST.json  PLATFORM_ARCHITECTURE.md  PORTABLE_SERVER.md  Procfile  RAILWAY_BUILD.md  README.md  SECURITY.md  SELF_HOSTING.md  START_HERE.html  TASK_ROUTER.md  agent_core-1.py  amos-autonomous  amosclaud-workspace.ps1  amosclaud-workspace.sh  amosclaud.ipynb  amosclaud_autonomous_conversation.py  amosclaude-agent-automation-fix.patch  amosclaude-repository-repair-1.patch  app.js  app.py  auth.py  (+52 more)
.amosclaud/: README.md  approvals.yml  platform-requirements.json  repair-policy.json  review.yml  security.yml
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.ipynb_checkpoints/: amosclaud-checkpoint.ipynb
Amosclaud/: Amosclaud.py  README.md  __init__.py  platform_bus.py  programming_bytes_system_cb.py
Amosclaud-metadata/: README.md  manifest.json  pyproject.toml
Amosclaud-metadata/src/amosclaud_metadata/: __init__.py  git_metadata.py  models.py  service.py  storage.py  validation.py
Amosclaud-metadata/tests/: conftest.py  test_metadata_core.py  test_storage_concurrency.py
Infrastructure/: Dockerfile  docker-compose.yml
Scripts/: start.sh
agents/: __init__.py  codex_agent.py  manifest.json
amomodel/: README.md  __init__.py  api.py  manifest.json  runtime.py  service_graph.py  state.py
amosclaud/: __init__.py  cb.py
amosclaud-os/: README.md  pyproject.toml
amosclaud_agent_sdk/: __init__.py  async_client.py  cli.py  client.py  errors.py  message_parser.py  options.py  query.py  runtime_version.py  session_import.py  session_mutations.py  session_resume.py  session_store.py  session_store_validation.py  session_summary.py  sessions.py  tools.py  transcript_mirror_batcher.py
amosclaud_bot/: __init__.py  approval_gate.py  approvals.py  autonomous_brain.py  autonomous_planning.py  bot.py  cli.py  codex_capabilities.py  comment_style.py  dispatcher.py  errors.py  execution_dashboard.py  github_intelligence.py  handlers.py  intelligence_router.py  mission_ledger.py  privacy_gate.py  professional.py  status_board.py
amosclaud_language/: __init__.py  cli.py  lexer.py  parser.py  runtime.py
amosclaud_metrics/: __init__.py  collectors.py  history.py  integration.py  platform.py  registry.py  server.py
amosclaud_model/: __init__.py  cli.py  config.py  metadata.py  model.py  server.py  service_log.py  training_service.py  workspace.py
amosclaud_os/: __init__.py
amosclaud_platform/: __init__.py  __main__.py  control.py
amosclaud_serverless/: __init__.py
amoscloud_ai/: Amosclaud.py  Codex.py  __init__.py  admin_bootstrap.py  agent.py  agent_actions.py  agent_chain.py  agent_memory.py  agent_tokens.py  agentic_cloud_engine.py  amos_test_language.py  auth_self_repair.py  autonomous_api_chain.py  autonomous_codex_config.py  autonomous_learning_academy.py  autonomous_learning_level2.py  autonomous_models_integra.py  autonomous_server.py  bundles.py  bundles_host.py  cli.py  cloud_task_runner.py  codex_memory.py  codex_system_bundle.py  config.py  copilot.py  db_migrations.py  engineering_agent.py  engineering_verification.py  logger.py  mail_delivery.py  mail_http.py  main.py  mapping_bundles.py  model_api_response.py  model_network.py  model_services.py  model_station.py  models.py  operator.py  (+15 more)
amoscloud_local_agent/: __init__.py  agent.py
amosflow/: main.py
amoslang/: __init__.py
android/: build.gradle.kts  settings.gradle.kts
api-gateway/: .env  Dockerfile  __init__.py  config.py  conftest.py  dependencies.py  generate_token.py  main.py  requirements.txt  test_build_endpoints.py
api_key_manager/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
app/: __init__.py
appliance/: README.md
apps/: main.py
authentication/: README.md  railway.env.example
cli/: __init__.py  client.py  commands.py  config.py  main.py
cmood/: __init__.py  agent.py  collector.py  config.py  config.py`  main.py  orchestrator.py  requirements.txt
config/: agent_policy.json  amosclaud-os.yaml  autonomous-codex.toml
controllers/: book.controller.js
dashboard/: Dashboard.tsx
database/: __init__.py  models.py  session.py
deployment_worker/: config.py  executor.py  main.py  models.py
desktop/: main.js  package.json  preload.js
docs/: AGENT_SDK.md  AMOSCLAUD_API_KEY.md  AMOSCLAUD_BOT_COMMANDS.md  AMOSCLAUD_BOT_REVIEW.md  AMOSCLOUD_WIREGUARD_GATEWAY.md  ARCHITECTURE_CONTRACT.md  AUTH_EMAIL_SETUP.md  AUTONOMOUS_JOB_AND_HEAD_SURFACES.md  AUTONOMOUS_REPAIR_ENGINE_V1.md  CNAME  DOMAIN_OWNERSHIP.md  FUTURISTIC_AUTONOMOUS_ARCHITECTURE.md  GITHUB_TRAVEL_API.md  LOCAL_MATRIX_AGENT.md  OPERATION_BUCKETS.md  OWNER_ACCOUNT_SETUP.md  PRODUCT_SPECIFICATION.md  PYTHON_AUTONOMOUS_ENGINEERING_BOOK.md  RAILWAY_PERSISTENCE.md  STANDALONE_REPOSITORY_PLATFORM.md  TRUTH_ONLY_SERVICE_INVENTORY.md  WEBSITE_APPROVAL_BACKEND.md  WIFI_ACCESS_POINT.md  amo-runtime.md  autonomous-react.md  ci-safety.md  cmood-workflow-repair.md  continuous-integration.md  doctor-healing-coordinator.md  openai-compatible-api.md  verified-json-autorepair.md
examples/: hello-agent.amo  hello.amcl  request_verified_work.py
metrics-server/: Dockerfile  README.md
model-workspace/: Dockerfile  README.md  start-model.sh
models/: apiKey.js  book.model.js  book.model.ts  main.py
notebooks/: amosclaud_autonomous_lab.ipynb
pages-site/: app.js  autonomous-approval-queue.css  autonomous-approval-queue.js  control-api-config.js  control-plane-enhancements.css  control-plane-enhancements.js  control-plane.js  hub.css  index.html  public-fixer-mirror.css  public-fixer-mirror.js  settings-review-center.css  settings-review-center.js  styles.css
public/: index.html  script.js  (+1 more)
(+706 files in other folders)
