[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amosclaud"
version = "1.0.1"
description = "Amosclaud development, repository, mail, storage, community, CI/CD, deployment platform, and computer language runtime."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Amosclaud Team", email = "support@amosclaud.com"}
]
license = "LicenseRef-Proprietary"
license-files = ["LICENSE", "LICENSE-COMMERCIAL.txt"]
keywords = ["amosclaud", "amcl", "programming-language", "fastapi", "cicd", "repositories", "deployment", "pwa"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Build Tools"
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://amosclaud.com"
Repository = "https://github.com/wamakologeorge-dev/amosclaude-clean"
Documentation = "https://amosclaud.com/docs"

[project.scripts]
amosclaud = "amoscloud_ai.main:main"
amosclaud-runner = "amoscloud_ai.runner_client:main"
amosclaud-memory = "amoscloud_ai.virtual_memory:main"
amosclaud-agent-memory = "amoscloud_ai.agent_memory:main"
amosclaud-autonomous-setup = "amoscloud_ai.agent.bootstrap:main"
amosclaud-autonomous-doctor = "amoscloud_ai.agent.preflight:main"
amosclaud-workspace = "amoscloud_ai.workspace_control:main"
amosclaud-model = "amosclaud_model.cli:main"
amosclaud-metrics = "amosclaud_metrics.server:main"
amcl = "amosclaud_language.cli:main"
amosclaud-tamper-server = "Amosclaud.api.path.byte.server.router.folder.cb.chapter.core.system.py:main"

[tool.setuptools.packages.find]
include = [
  "Amosclaud*",
  "amoscloud_ai*",
  "amosclaud_language*",
  "amosclaud_model*",
  "amosclaud_metrics*",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
