[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amosclaud-metadata"
version = "0.1.0"
description = "Canonical verified metadata and engineering history for Amosclaud Autonomous and Amosclaud OS"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Amosclaud"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
